@@ -2,10 +2,7 @@ package org.dddjava.jig.infrastructure.javaparser;
 
 import com.github.javaparser.ast.body.MethodDeclaration;
 import com.github.javaparser.ast.visitor.VoidVisitorAdapter;
-import org.dddjava.jig.domain.model.data.classes.method.MethodComment;
-import org.dddjava.jig.domain.model.data.classes.method.MethodIdentifier;
-import org.dddjava.jig.domain.model.data.classes.method.MethodImplementation;
-import org.dddjava.jig.domain.model.data.classes.method.MethodSignature;
+import org.dddjava.jig.domain.model.data.classes.method.*;
 import org.dddjava.jig.domain.model.data.classes.type.TypeIdentifier;
 import org.dddjava.jig.domain.model.data.comment.Comment;
 
@@ -21,21 +18,19 @@ class JavaparserMethodVisitor extends VoidVisitorAdapter<List<MethodImplementati
 
     @Override
     public void visit(MethodDeclaration n, List<MethodImplementation> collector) {
-        MethodIdentifier methodIdentifier = new MethodIdentifier(
-                typeIdentifier,
-                new MethodSignature(
-                        n.getNameAsString(),
-                        // TODO 引数を取得したい
-                        // n.getParameters() でパラメタは取れるが、fqnは直接とれず、もしとれたとしても確実ではない。
-                        // Argumentとして候補を取り扱ってマッチさせる、といったのがあればいい？それともbyteCode由来のMethodをこのタイミングで探す？
-                        Collections.emptyList()
-                ));
+        var methodImplementationDeclarator = new MethodImplementationDeclarator(
+                n.getNameAsString(),
+                // TODO n.getParameters() から引数型にする。引数名はとりあえずいらない。
+                List.of()
+        );
 
         collector.add(
                 n.getJavadoc().map(javadoc ->
-                        new MethodImplementation(methodIdentifier,
-                                new MethodComment(methodIdentifier, Comment.fromCodeComment(javadoc.getDescription().toText()))
-                        )).orElseGet(() -> new MethodImplementation(methodIdentifier))
+                        new MethodImplementation(typeIdentifier, methodImplementationDeclarator,
+                                new MethodComment(Comment.fromCodeComment(javadoc.getDescription().toText()))
+                        )).orElseGet(() ->
+                        new MethodImplementation(typeIdentifier, methodImplementationDeclarator,
+                                MethodComment.empty()))
         );
     }
 }
